--- a/Debug/makefile
+++ b/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: converter-cs.elf secondary-outputs
 
 # Tool invocations
-converter-cs.elf converter-cs.map: $(OBJS) $(USER_OBJS) C:\Users\ordum\Документы\STM32CubeWorkspace\converter-cs\STM32G473CBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "converter-cs.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\ordum\Документы\STM32CubeWorkspace\converter-cs\STM32G473CBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="converter-cs.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+converter-cs.elf converter-cs.map: $(OBJS) $(USER_OBJS) C:\Users\ordum\OneDrive\Документы\STM32CubeWorkspace\convCS\STM32G473CBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "converter-cs.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\ordum\OneDrive\Документы\STM32CubeWorkspace\convCS\STM32G473CBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="converter-cs.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
