--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ Debug/Core/Src/converter.cyclo
 Debug/Core/Src/pwmHandler.cyclo
 Debug/Core/Src/pwmHandler.o
 Debug/Core/Src/pwmHandler.su
+Debug/Core/Src/pwm.d
