led toggling to processes added

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,24 @@ Debug/Core/Src/stm32g4xx_it.su
 Debug/Core/Src/main.cyclo
 Debug/Core/Src/main.d
 Debug/Core/Src/main.su
+Debug/Core/Src/system_stm32g4xx.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_adc_ex.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_adc.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_cortex.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_dma_ex.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_dma.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_exti.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_fdcan.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_flash_ex.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_flash_ramfunc.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_flash.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_gpio.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_pwr_ex.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_pwr.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_rcc_ex.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_rcc.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_tim_ex.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_tim.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_uart_ex.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_uart.o
+Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal.o
