--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,23 @@
-Debug/converter-cs.map
-Debug/Core/Src/converter.o
-Debug/Core/Src/pwm.cyclo
-Debug/Core/Src/pwm.o
-Debug/Core/Src/pwm.su
-Debug/converter-cs.map
-Debug/Core/Src/can.o
-Debug/Core/Src/converter.o
-Debug/Core/Src/diag.cyclo
-Debug/Core/Src/diag.d
-Debug/Core/Src/diag.o
-Debug/Core/Src/diag.su
-Debug/Core/Src/pwm.cyclo
-Debug/Core/Src/pwm.o
-Debug/Core/Src/pwm.su
-Debug/Core/Src/sensor.o
-Debug/Core/Src/converter.su
-Debug/Core/Src/pid.cyclo
-Debug/Core/Src/pid.d
-Debug/Core/Src/pid.o
-Debug/Core/Src/pid.su
-Debug/Core/Src/precharge.o
-Debug/Core/Src/converter.cyclo
-Debug/Core/Src/pwmHandler.cyclo
-Debug/Core/Src/pwmHandler.o
-Debug/Core/Src/pwmHandler.su
-Debug/Core/Src/pwm.d
-Debug/converter-cs.elf
-Debug/converter-cs.list
-Debug/Core/Src/main.o
-Debug/Core/Src/stm32g4xx_hal_msp.cyclo
-Debug/Core/Src/stm32g4xx_hal_msp.o
-Debug/Core/Src/stm32g4xx_hal_msp.su
-Debug/Core/Src/stm32g4xx_it.cyclo
-Debug/Core/Src/stm32g4xx_it.o
-Debug/Core/Src/stm32g4xx_it.su
-Debug/Core/Src/main.cyclo
-Debug/Core/Src/main.d
-Debug/Core/Src/main.su
-Debug/Core/Src/system_stm32g4xx.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_adc_ex.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_adc.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_cortex.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_dma_ex.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_dma.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_exti.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_fdcan.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_flash_ex.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_flash_ramfunc.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_flash.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_gpio.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_pwr_ex.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_pwr.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_rcc_ex.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_rcc.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_tim_ex.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_tim.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_uart_ex.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal_uart.o
-Debug/Drivers/STM32G4xx_HAL_Driver/Src/stm32g4xx_hal.o
+build/test/dependencies/sample.d
+build/test/dependencies/test_sample_runner.d
+build/test/dependencies/test_sample.d
+build/test/dependencies/unity.d
+build/test/out/test_sample/sample.o
+build/test/out/test_sample/test_sample_runner.o
+build/test/out/test_sample/test_sample.o
+build/test/out/test_sample/test_sample.out
+build/test/out/test_sample/unity.o
+build/test/preprocess/files/test_sample/test_sample.c
+build/test/preprocess/files/test_sample/directives_only/test_sample.c
+build/test/preprocess/files/test_sample/full_expansion/test_sample.c
+build/test/preprocess/includes/test_sample/test_sample.c.yml
+build/test/results/test_sample.pass
+build/test/runners/test_sample_runner.c
+build/vendor/cmock/src/cmock_internals.h
+build/vendor/cmock/src/cmock.c
+build/vendor/cmock/src/cmock.h
+build/vendor/cmock/src/meson.build
+build/vendor/unity/src/meson.build
+build/vendor/unity/src/unity_internals.h
+build/vendor/unity/src/unity.c
+build/vendor/unity/src/unity.h
