--- a/Debug/makefile
+++ b/Debug/makefile
@@ -34,34 +34,34 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := converter-cs
+BUILD_ARTIFACT_NAME := convCS
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 EXECUTABLES += \
-converter-cs.elf \
+convCS.elf \
 
 MAP_FILES += \
-converter-cs.map \
+convCS.map \
 
 SIZE_OUTPUT += \
 default.size.stdout \
 
 OBJDUMP_LIST += \
-converter-cs.list \
+convCS.list \
 
 
 # All Target
 all: main-build
 
 # Main-build Target
-main-build: converter-cs.elf secondary-outputs
+main-build: convCS.elf secondary-outputs
 
 # Tool invocations
-converter-cs.elf converter-cs.map: $(OBJS) $(USER_OBJS) C:\Users\ordum\OneDrive\Документы\STM32CubeWorkspace\convCS\STM32G473CBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "converter-cs.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\ordum\OneDrive\Документы\STM32CubeWorkspace\convCS\STM32G473CBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="converter-cs.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+convCS.elf convCS.map: $(OBJS) $(USER_OBJS) C:\Users\ordum\OneDrive\Документы\STM32CubeWorkspace\convCS\STM32G473CBTX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "convCS.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"C:\Users\ordum\OneDrive\Документы\STM32CubeWorkspace\convCS\STM32G473CBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="convCS.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -70,14 +70,14 @@ default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-converter-cs.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "converter-cs.list"
+convCS.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "convCS.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) converter-cs.elf converter-cs.list converter-cs.map default.size.stdout
+	-$(RM) convCS.elf convCS.list convCS.map default.size.stdout
 	-@echo ' '
 
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
