ceedling tests added

--- a/Debug/makefile
+++ b/Debug/makefile
@@ -54,7 +54,8 @@ convCS.list \
 
 
 # All Target
-all: main-build
+all:
+	+@$(MAKE) --no-print-directory pre-build && $(MAKE) --no-print-directory main-build
 
 # Main-build Target
 main-build: convCS.elf secondary-outputs
@@ -80,6 +81,10 @@ clean:
 	-$(RM) convCS.elf convCS.list convCS.map default.size.stdout
 	-@echo ' '
 
+pre-build:
+	cd ../; ceedling test;
+	-@echo ' '
+
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
 
 fail-specified-linker-script-missing:
@@ -89,6 +94,6 @@ fail-specified-linker-script-missing:
 warn-no-linker-script-specified:
 	@echo 'Warning: No linker script specified. Check the linker settings in the build configuration.'
 
-.PHONY: all clean dependents main-build fail-specified-linker-script-missing warn-no-linker-script-specified
+.PHONY: all clean dependents main-build fail-specified-linker-script-missing warn-no-linker-script-specified pre-build
 
 -include ../makefile.targets
