Upgrade actions/checkout to v3 and set Ruby version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.2  # или любая >=3.0
       - name: Run tests
         uses: batov/ceedling_action@master
       - name: Publish Unit Test Results
